frontend/test/should_fail/array_removeIf_graph_element.grg
test array_removeIf(ref a:array<int>) {
	n:Node;	
	if {
		a.removeIf{value:int -> n}.empty();
	}	
}
